fix gap under youtube videos

--- a/drugsandme/static/sass/main.scss
+++ b/drugsandme/static/sass/main.scss
@@ -829,3 +829,13 @@ ul{
     width: 100%;
   }
 }
+
+// ------------
+// dirty fixes
+// ------------
+
+// youtube videos added in richtext editor has a padding bottom added to style
+// this ignores it
+.responsive-object {
+    padding-bottom: 0 !important;
+}
